# GameboyEmu

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile
include/: cpu.h  instruction.h  memory.h  utils.h
src/: common.h  emu.c  emu.h  instruction.c  interrupt.c  interrupt.h  joypad.c  joypad.h  run.c  timer.c  timer.h  utils.c  utils.h
src/cpu/: cpu.c  cpu.h  instructions.c  instructions.h
src/debug/: debug.c  debug.h
src/mmu/: cartridge.c  cartridge.h  dma.c  dma.h  mmu.c  mmu.h
src/ppu/: fetcher.c  fetcher.h  fifo.c  fifo.h  ppu.c  ppu.h  renderer.c  renderer.h
